--- a/Exercice2STL/Exercice2STL.vcxproj
+++ b/Exercice2STL/Exercice2STL.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{a64b77cf-4489-45ac-81e0-1452a1324572}</ProjectGuid>
     <RootNamespace>Exercice2STL</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Exercice2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
