--- a/StlExos/StlExos.vcxproj
+++ b/StlExos/StlExos.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{5a497d2f-68cc-4122-865b-679a83eed23d}</ProjectGuid>
     <RootNamespace>StlExos</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Exercice1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
